<resources>
    <string name="app_name">projeto_aguaponto</string>
    <string name="content_description_logo">logo</string>

    <string name="nav_text">Olá, [User]</string>
    <string name="ingerido_ml">0</string>
    <string name="ingerir_ml">De 2500 ml</string>
    <string name="ml_text">ml.</string>
    <string name="add_ml">+300 ml</string>
    <string name="descrição_image_menu">Menu</string>

    <string name="hint_peso">Seu Peso (kg):</string>
    <string name="hint_idade">Sua Idade:</string>
    <string name="hint_resultado">Resultado:</string>
    <string name="text_button_calcular">Calcular ingestão diária</string>
    <string name="toast_informe_peso">Informe seu peso</string>
    <string name="toast_informe_idade">Informe sua idade</string>
</resources>