<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkBlue"
        tools:context=".MainActivity">

        <View
            android:id="@+id/container_header_main"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/container_header_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="124dp"
            android:text="@string/nav_text"
            android:textColor="@color/white"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="@+id/container_header_main"
            app:layout_constraintEnd_toStartOf="@+id/ic_menu"
            app:layout_constraintHorizontal_bias="0.38"
            app:layout_constraintStart_toStartOf="@+id/container_header_main"
            app:layout_constraintTop_toTopOf="@+id/container_header_main"
            app:layout_constraintVertical_bias="0.541" />

        <ImageView
            android:id="@+id/ic_menu"
            android:contentDescription="@string/descrição_image_menu"
            android:layout_width="67dp"
            android:layout_height="52dp"
            app:layout_constraintBottom_toBottomOf="@+id/container_header_main"
            app:layout_constraintEnd_toEndOf="@+id/container_header_main"
            app:layout_constraintHorizontal_bias="0.953"
            app:layout_constraintStart_toStartOf="@+id/container_header_main"
            app:layout_constraintTop_toTopOf="@+id/container_header_main"
            app:layout_constraintVertical_bias="0.541"
            app:srcCompat="@drawable/ic_menu" />

        <TextView
            android:id="@+id/txt_resultado_ml_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingerido_ml"
            android:textColor="@color/white"
            android:textSize="90sp"

            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/bt_add_ingestao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/container_header_main"
            app:layout_constraintVertical_bias="0.451" />

        <TextView
            android:id="@+id/meta_diaria_ml"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingerir_ml"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/container_header_main"
            app:layout_constraintVertical_bias="0.453" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ml_text"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.808"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/container_header_main"
            app:layout_constraintVertical_bias="0.292" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_add_ingestao"
            android:layout_width="109dp"
            android:layout_height="111dp"
            android:layout_margin="20dp"
            android:background="@drawable/bg_solid_button"
            android:padding="15dp"
            android:text="@string/add_ml"
            android:textColor="#FFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/container_header_main"
            app:layout_constraintVertical_bias="0.932" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>