<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="@+id/txt_resultado_ml"
        app:layout_constraintTop_toBottomOf="@+id/txt_resultado_ml"
        tools:context=".CalcularActivity">

        <View
            android:id="@+id/container_header"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/container_header"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logo"
            android:contentDescription="@string/content_description_logo"
            android:layout_width="106dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="35dp"
            android:src="@drawable/logoaguaponto"
            app:layout_constraintBottom_toTopOf="@+id/edit_peso"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_calcular"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="54dp"
            android:layout_marginEnd="54dp"
            android:layout_marginBottom="182dp"
            android:background="@drawable/bg_degrade_button"
            android:padding="15dp"
            android:text="@string/text_button_calcular"
            android:textColor="#FFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_resultado_ml" />

        <EditText
            android:id="@+id/edit_peso"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="42dp"
            android:gravity="center"
            android:hint="@string/hint_peso"
            android:inputType="numberDecimal"
            android:maxLength="7"
            android:padding="15dp"
            android:textColor="#1123FF"
            android:textColorHint="@android:color/holo_blue_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/edit_idade"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <EditText
            android:id="@+id/edit_idade"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="86dp"
            android:gravity="center"
            android:hint="@string/hint_idade"
            android:inputType="number"
            android:maxLength="3"
            android:padding="15dp"
            android:textColor="#1123FF"
            android:textColorHint="@android:color/holo_blue_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txt_resultado_ml"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_peso" />

        <EditText
            android:id="@+id/txt_resultado_ml"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="64dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hint_resultado"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="#1123FF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/bt_calcular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_idade" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>